*** empty log message ***

--- a/doc/src/manual/ch-ana-sim.tex
+++ b/doc/src/manual/ch-ana-sim.tex
@@ -317,9 +317,13 @@ These programs can produce output in various forms (on the screen,
 as PostScript, in various image formats, etc.)
 
 One straightforward solution is to import or paste them into spreadsheet
-programs such as OpenOffice Calc, Gnumeric or MS Excel. These programs
-have good charting and statistical features, but the number of rows
-is usually limited to about 32,000..64,000.
+programs such as OpenOffice Calc, Microsoft Excel or GNOME Gnumeric.
+These programs have good charting and statistical features, but the number
+of rows is usually limited to about 32,000..64,000.
+One useful functionality spreadsheets offer for analysing scalar files is
+known as \textit{PivotTable} in Excel, and as \textit{DataPilot} in in OpenOffice.
+The easiest way to import scalar files into them is via copy/paste
+from Scalars.
 
 Alternatively, one can use numerical packages such as \textit{Octave},
 \textit{Matlab} or the statistics package \textit{R}.
